recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: not found: value double
	subtree(steps,length,angle,double)
                                   ^